namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    env: prod
  name: icgroup
