icwebapp_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: icwebapp-deploy
  namespace: icgroup
  labels:
    env: prod
spec:
  strategy:
    type: Recreate
  replicas: 2
  selector:
    matchLabels:
      app: ic-webapp
  template:
    metadata:
      name: ic-webapp
      labels:
        env: prod
        app: ic-webapp
        type: pod
    spec:
      containers:
        - image: itirenegad/ic-webapp:1.0
          name: ic-webapp
          ports:
            - containerPort: 8080
