odoo_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo-deploy
  namespace: icgroup
  labels:
    app: db_odoo
    env: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: odoo
  template:
    metadata:
      labels:
        app: odoo
    spec:
      containers:
        - name: odoo
          image: odoo:13
          ports:
            - containerPort: 8069
      volumes:
        - name: db-volume
          persistentVolumeClaim:
            claimName: db-pvc
