postgres_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: db-pod
  namespace: icgroup
  labels:
    app: db_odoo
    env: prod
spec:
  containers:
    - name: postgres
      image: postgres:13
      volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: db-volume
  volumes:
    - name: db-volume
      persistentVolumeClaim:
        claimName: db-pvc
