icwebapp_service.yml
apiVersion: v1
kind: Service
metadata:
  name: icwebapp-service
  namespace: icgroup
  labels:
    env: prod
    type: clusterip
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: ic-webapp
