odoo_service.yml
apiVersion: v1
kind: Service
metadata:
  name: odoo-service
  namespace: icgroup
  labels:
    app: odoo_web
    env: prod
spec:
  type: NodePort
  ports:
    - name: odoo
      protocol: TCP
      port: 8069 
      targetPort: 8069
      nodePort: 30069
  selector:
    app: odoo
