pgadmin_service.yml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: icgroup
  labels:
    app: pgadmin
    env: prod
spec:
  type: NodePort
  ports:
    - name: pgadmin
      protocol: TCP
      port: 80 
      targetPort: 80
      nodePort: 30080
  selector:
    app: pgadmin
