postgres_service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: icgroup
  labels:
    app: db_odoo
    env: prod
spec:
  type: ClusterIP
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: db_odoo
