icwebapp_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: icwebapp-ingress
  namespace: icgroup
  labels:
    env: prod
    type: ingress
spec:
  rules:
  - host: gp2-webapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: icwebapp-service
            port:
              number: 80
